tests/positive/ownership/soi_loop_scope.tx
// Scenario 5: Loop Iterations (Frame Arena Reset)
// Variables created in a loop die at the end of each iteration.
// No memory bloat: the arena pointer resets each iteration.

class DataChunk {
    index: int32;
    constructor(i: int32) { this.index = i; }
}

function process(chunk: DataChunk) {
    // Last use — chunk is moved in and freed at function exit
}

function main() {
    for (let i = 0; i < 10; i = i + 1) {
        let temp = new DataChunk(i); // Created in Frame Arena
        process(temp);
        // 'temp' dies at the end of the loop iteration
    }
    print("Loop scope test passed! 10 iterations completed.");
}
