tests/negative/ownership/double_move_loop.tx
// Description: Cannot move same variable twice in loop
// EXPECTED: COMPILE_ERROR

class Box {
    id: int32;
    constructor() { this.id = 1; }
}

function consume(b: Box) {}

function main() {
    let b = new Box();
    for (let i = 0; i < 5; i++) {
        // ERROR: moved in first iteration, cannot move again
        consume(b);
    }
}
